fix z-index of header

--- a/src/scripts/modules/media/media.less
+++ b/src/scripts/modules/media/media.less
@@ -14,9 +14,9 @@
       left: 0;
       right: 0;
       background: #ededed;
-      z-index: 0;
+      z-index: 1;
       border-bottom: 2px solid #dcdcdc;
-      box-shadow: 0 2px 3px hsla(0,0%,4%,.1);
+      //box-shadow: 0 2px 3px hsla(0,0%,4%,.1);
     }
 
     &.pinned {
@@ -24,7 +24,7 @@
       top: 0;
       width: 100%;
       max-width: @max-viewport-width;
-      z-index: 1;
+      z-index: 2;
       animation-name: translateHeader;
       animation-duration: 0.2s;
       animation-timing-function: ease-out;
